--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,8 @@
   <meta charset="utf-8">
   <title>Angular Blog</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
 </head>
 
 <body>
