--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <title>Angular Blog</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="icon" type="image/x-icon" href="/assets/favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
 </head>
 
 <body>
